aggiunto la prima schermata di onboarding e rinominato il componente

--- a/src/app/componenti/home/home.component.html
+++ b/src/app/componenti/home/home.component.html
@@ -157,7 +157,7 @@
                 Accedi o crea un account per personalizzare la tua 
                 esperienza e partecipare alla community game
             </p>
-            <button mat-raised-button color="accent" class="login-button">Log in o Sign up</button>
+            <button mat-raised-button color="accent" class="login-button" (click)="onClick()">Log in o Sign up</button>
         </div>
     </div>
 </div>
