--- a/src/app/componenti/home/home.component.css
+++ b/src/app/componenti/home/home.component.css
@@ -64,7 +64,8 @@ mat-card-title {
 }
 
 #evidenza {
-    max-width: 400px;
+  max-width: 400px;
+  width: 100%;
 }
 
 .card .first-chip {
@@ -121,6 +122,9 @@ mat-card-title {
 
 .login-container{
   padding-inline: 1rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .login-desc{
@@ -130,6 +134,7 @@ mat-card-title {
 
 .login-button{
   width: 100%;
+  max-width: 400px;
   background-color: black !important;
 }
 
