aggiunto onboarding suggerimenti

--- a/src/app/componenti/onboarding-obiettivi/onboarding-obiettivi.component.html
+++ b/src/app/componenti/onboarding-obiettivi/onboarding-obiettivi.component.html
@@ -16,6 +16,6 @@
         </div>
     </div>
     <div class="sezione-button">
-        <button mat-raised-button color="accent" class="submit-button">Inizia il Viaggio</button>
+        <button mat-raised-button color="accent" class="submit-button" (click)="onSubmit()">Inizia il Viaggio</button>
     </div>
 </div>
