--- a/src/app/componenti/onboarding-suggerimenti/onboarding-suggerimenti.component.html
+++ b/src/app/componenti/onboarding-suggerimenti/onboarding-suggerimenti.component.html
@@ -1,1 +1,36 @@
-<p>onboarding-suggerimenti works!</p>
+<div class="sezione">
+    <h3 class="titolo-blocco">
+        Il prossimo viaggio ti aspetta
+    </h3>
+    <p class="paragrafo">
+        Abbiamo trovato 3 luoghi da cui iniziare
+    </p>
+</div>
+<div class="carousel-container">
+    <owl-carousel-o [options]="customOptions">
+        <ng-template carouselSlide *ngFor="let luogo of luoghi_selezionati">
+            <div class="card-container">
+                <mat-card class="card">
+                    <img class="imm-card" src="{{luogo.immagine_link}}">
+                    <div class="emozioni-container">
+                        <mat-chip class="chip" *ngFor="let ebiettivo of luogo.obiettivi" >
+            
+                            {{ebiettivo}}
+            
+                        </mat-chip>
+                    </div>
+                    <mat-card-title>{{luogo.nome}}</mat-card-title>
+                    <p class="par-card">
+                        {{luogo.descrizione}}
+                    </p>
+                    <div>
+                        <mat-icon *ngFor="let icon of luogo.anima_locus_icons" fontIcon="{{icon}}"></mat-icon>
+                    </div>
+                    <button mat-raised-button color="accent" class="scopri-button" (click)="onClickScopri(luogo.codice)">Scopri Luogo</button>
+                </mat-card>
+            </div>
+        </ng-template>
+    </owl-carousel-o>
+    <div class="spacer">
+    </div>
+</div>
