--- a/src/app/componenti/onboarding-obiettivi/onboarding-obiettivi.component.html
+++ b/src/app/componenti/onboarding-obiettivi/onboarding-obiettivi.component.html
@@ -23,7 +23,7 @@
         </div>
     </div>
     <div class="sezione-button">
-        <button class="submit-button" (click)="onSubmit()">
+        <button class="button" (click)="onSubmit()">
             Scopri Suggerimenti
         </button>
     </div>
