--- a/src/app/componenti/onboarding/onboarding.component.html
+++ b/src/app/componenti/onboarding/onboarding.component.html
@@ -18,7 +18,7 @@
                 Lasciati Sorprendere
             </h3>
             <p class="paragrafo">
-                Ispirazione per il tuo prossimo viaggio. Sul sito e nella vita reale
+                Ispirazione per il tuo prossimo viaggio. Su STEP e nella vita reale
             </p>
         </div>
 
@@ -40,7 +40,7 @@
         </div>
 
         <div class="sezione" id="sezione-button">
-            <button mat-raised-button color="accent" class="login-button" (click)="onClick()">Inizia il Viaggio</button>
+            <button class="button" (click)="onClick()">Inizia il Viaggio</button>
         </div>
         
     </div>
