--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,30 @@
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; background-color: #f5f3f7;}
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+  background-color: #f5f3f7;
+}
+
+.button {
+  width: 100%;
+  max-width: 400px;
+  background-image: linear-gradient(to right, #002d6b, #015ede) !important;
+  color: white;
+  border-radius: 20px;
+  border: none;
+  font-size: 1rem;
+  height: 40px;
+}
+
+.paragrafo {
+  font-size: medium;
+  font-weight: 300;
+  color: #015ede;
+}
+
+
