--- a/src/app/componenti/home/home.component.html
+++ b/src/app/componenti/home/home.component.html
@@ -21,7 +21,7 @@
         <div class="card-container">
 
             <mat-card class="card" id="evidenza">
-                <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg"
+                <img class="imm-card"  src="https://material.angular.io/assets/img/examples/shiba2.jpg"
                     alt="Photo of a Shiba Inu">
 
 
@@ -46,7 +46,7 @@
         <div class="scrollable-container">
 
             <mat-card class="card">
-                <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg"
+                <img class="imm-card" src="https://material.angular.io/assets/img/examples/shiba2.jpg"
                     alt="Photo of a Shiba Inu">
 
 
