--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,22 @@
-<mat-toolbar>
-    
-    <span>LOGO</span>
-    <span class="spacer"></span>
-    <button mat-icon-button >
-        <mat-icon>menu</mat-icon>
-    </button>
-</mat-toolbar>
-<router-outlet></router-outlet>
+<mat-drawer-container class="container" autosize>
+    <mat-drawer #drawer class="sidenav" mode="over">
+        <mat-toolbar>
+            <span class="spacer"></span>
+            <button mat-mini-fab class="menu-button" (click)="drawer.close()">
+                <mat-icon>close</mat-icon>
+            </button>
+        </mat-toolbar>
+    </mat-drawer>
+
+    <div class="content">
+        <mat-toolbar>
+            <span>LOGO</span>
+            <span class="spacer"></span>
+            <button mat-mini-fab class="menu-button" (click)="drawer.open()">
+                <mat-icon>menu</mat-icon>
+            </button>
+        </mat-toolbar>
+        <router-outlet></router-outlet>
+    </div>
+
+</mat-drawer-container>
