--- a/src/app/componenti/home/home.component.css
+++ b/src/app/componenti/home/home.component.css
@@ -46,17 +46,35 @@
   margin-right: 1rem;
 }
 
-.card-container {
-  margin-inline: 1rem;
+.card {
+  border-radius: 0;
+  box-shadow: none;
+  background-color: transparent;
 }
 
-.card {
-  max-width: 220px;
-  border: none;
-  box-shadow: none;
-  border-radius: 0;
-  overflow-x: initial;
-  white-space: initial;
+.imm-card {
+  border-radius: 5%;
+  height: 430px;
+  max-width: 290px;
+  object-fit: cover;
+  width: auto;
+}
+
+.card-container {
+  padding-inline: 1rem;
+}
+
+.emozioni-container {
+  padding: 0.5rem 0;
+}
+
+.par-card {
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  font-size: small;
+  color: #015EDE;
 }
 
 mat-card-title {
@@ -64,7 +82,12 @@ mat-card-title {
 }
 
 #evidenza {
-  max-width: 400px;
+  max-width: 100%;
+  width: 100%;
+}
+
+#evidenza .imm-card{
+  max-width: 100%;
   width: 100%;
 }
 
