--- a/src/app/componenti/onboarding-suggerimenti/onboarding-suggerimenti.component.html
+++ b/src/app/componenti/onboarding-suggerimenti/onboarding-suggerimenti.component.html
@@ -16,7 +16,7 @@
                     <div class="emozioni-container">
                         <mat-chip disabled class="chip" *ngFor="let obiettivo of luogo.obiettivi" >
             
-                            {{firstLetterUpper(obiettivo)}}
+                            {{firstLetterUpper(obiettivo.nome)}}
             
                         </mat-chip>
                     </div>
