--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,6 +16,8 @@
                 <mat-icon>menu</mat-icon>
             </button>
         </mat-toolbar>
+        <div class="toolbar-padding">
+        </div>
         <router-outlet></router-outlet>
     </div>
 
