--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
-
+@import '~css-star-rating/css/star-rating.min.css';
 html,
 body {
   height: 100%;
@@ -9,6 +9,14 @@ body {
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
   
+}
+
+.rating.color-positive .star-container .star svg {
+  fill: #ffc058!important;
+}
+
+.rating.color-negative .star-container .star svg {
+  fill: #ffc058!important;
 }
 
 .button {
